js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-while-import-source-script-code-valid.js
var
smoosh
;
function
smoosh
(
)
{
}
let
x
=
0
;
while
(
!
x
)
{
x
+
+
;
import
.
source
(
'
<
module
source
>
'
)
;
}
;
reportCompare
(
0
0
)
;
