js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-while-not-extensible-args.js
DONOTEVALUATE
(
)
;
let
x
=
0
;
while
(
!
x
)
{
x
+
+
;
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
'
'
)
;
}
;
